force-app/main/default/objects/Payment_Link_Metadata__c/Payment_Link_Metadata__c.object-meta.xml
<CustomObject>
    <label>Payment Link Metadata</label>
    <nameField>
        <displayFormat>PLM-{00000}</displayFormat>
        <label>Payment Link Metadata Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Link Metadata</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>