force-app/main/default/objects/Payment_Link_Metadata__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <label>Field Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>