force-app/main/default/objects/Payment_Link_Metadata__c/fields/Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link__c</fullName>
    <label>Payment Link</label>
    <referenceTo>Payment_Link__c</referenceTo>
    <relationshipLabel>Metadata</relationshipLabel>
    <relationshipName>Metadata</relationshipName>
    <type>MasterDetail</type>
</CustomField>