force-app/main/default/objects/Payment_Link_Metadata__c/fields/Value_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Value_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Value Boolean</label>
    <type>Checkbox</type>
</CustomField>