force-app/main/default/objects/Payment_Link_Metadata__c/fields/Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Value_Number__c</fullName>
    <label>Value Number</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>