force-app/main/default/objects/Payment_Link_Metadata__c/fields/Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Value_Text__c</fullName>
    <label>Value Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>